# bootfrost

./: .gitignore  Cargo.toml  README.md  formula.pcf  log.txt  solverlog.json
bootfrost_derive/: Cargo.toml
bootfrost_derive/src/: lib.rs
problems/: ObsTest.pcf  Observer.pcf  Observer2.pcf  ObserverN.pcf  branch1.pcf  dedup.pcf  depth_test.pcf  formula.pcf  in_list.pcf  infixchain.pcf  is_removed.pcf  list_test2.pcf  manualbest.pcf  no_uo_left_N0.pcf  observe.pcf  ontol.pcf  ops.pcf  remove.pcf  solverfunction.pcf  sort_list.pcf  subformula.pcf  super1.pcf  test_r.pcf  true_list1.pcf  true_list2.pcf
problems/computation_mdpi_examples/: FBSCOP_Ex4.pcf  Floops_Ex4.pcf  ObsTest_GetStrings_Ex3.pcf  ObsTest_preprocessG_Ex1.pcf  ObsTest_preprocessH_Ex1.pcf  ObservabilityTest_Ex1.pcf  ObservabilityTest_Ex4.pcf
src/: answer.rs  base.rs  build.rs  context.rs  environment.rs  ifunctions.rs  lib.rs  main.rs  misc.rs  parser.rs  pcf.lalrpop  plain.rs  question.rs  solver.rs  solverlog.rs  strategies.rs  term.rs  tqfline.lalrpop
src/parser/: mod.rs  parser.rs  tqfline.lalrpop
src/strategies/: answer_validators.rs  attributes.rs  environment.rs  ifunctions.rs  mod.rs  strategies.rs
src/utils/: mod.rs  totalsize.rs
tests/: solve1.rs
