[package]
name = "bootfrost"
version = "0.1.0"
edition = "2021"
build = "src/build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.19.7"


[dependencies]
#lalrpop-util = "0.19.7"
#https://github.com/lalrpop/lalrpop/issues/650
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bootfrost_derive = {path = "bootfrost_derive"}